--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Internet</h1>
+        <h1 id="topo">Internet</h1>
         <h4>História, curiosidades e grandes nomes que estão por traz da maior invenção do mundo moderno!</h4>
         <ul>
             <a href="#Surgimento" ><li>Surgimento da Internet</li></a>
@@ -127,6 +127,7 @@
             </p>
             
         </section>
+        <a href="#topo"><small>Voltar ao topo</small></a>
     </main>
     <footer>Este site foi desenvolvido para estudos de HTML e CSS por Edson Nóbrega</footer>
 </body>
