--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <h1 id="topo">Internet</h1>
         <h4>História, curiosidades e grandes nomes que estão por traz da maior invenção do mundo moderno!</h4>
         <span class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        
+    </header>
+    <main>
         <menu id="itens">
             <ul>
                 <a href="#Surgimento" ><li>Surgimento da Internet</li></a>
@@ -21,8 +24,6 @@
                 <a href="#tag"><li>O que são Tags?</li></a>
             </ul>
         </menu>
-    </header>
-    <main>
         <section class="internet" >
             <h1 id="Surgimento">
                 Surgimento da Internet
@@ -134,7 +135,7 @@
             </p>
             
         </section>
-        <a href="#topo"><small>Voltar ao topo</small></a>
+        <a href="#topo"><small id="voltar">Voltar ao topo</small></a>
     </main>
     <script>
          function mudouTamanho(){
